Implementació i documentació GET de les contribucions d'un perfil d'usuari
