# api/openapi.yaml
@@ -5,77 +5,84 @@ info:
   description: "This is the Open API documentation for the REST API of our beloved application **Hacker News** deployed at <https://hackernews-projecteg14b.herokuapp.com/>. <br>¡ATENCIÓN, ESTÁ PENDIENTE! All operations are executable. Only one operation requires authentication: `deleteTweet`. In this case, you must **Authorize** your request by providing the api_key vaule you got when you created the tweet."
 servers:
   - url: 'https://hackernews-projecteg14b.herokuapp.com/'
-  - url: 'http://3.238.6.247:8080'
-  - url: 'http://54.90.45.71:8080'
-  - url: 'http://3.88.132.33:8080'
+  - url: 'http://3.228.12.251:8080'
 paths:
   /contributions:
     get:
-      tags:
-      - contributions
-      summary: Retrieves all the Contributions ordered by points (if type is url or ask) or by creation (if type is all)
-      operationId: getAllURLContributions
-      parameters:
-      - name: type
-        in: query
-        description: Contribution type to filter
-        required: true
-        schema:
-          type: string
-          enum: [all, url, ask]
-      - name: user_id
-        in: query
-        description: Contains the id of the User whose Contributions we want to see.
-        schema:
-          type: integer
-      - name: upvotedS
-        in: query
-        description: Equals 1 when we want to see the upvoted Contributions of the logged in User.
-        schema:
-          type: integer
-          
-      responses:
-        200:
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Contribution'
-    
+        tags:
+        - contributions
+        summary: Retrieves all the Contributions ordered by points (if type is url or ask) or by creation (if type is all)
+        operationId: getAllURLContributions
+        parameters:
+        - name: type
+          in: query
+          description: Contribution type to filter
+          required: false
+          schema:
+            type: string
+            enum: [all, url, ask]
+        - name: user_id
+          in: query
+          description: Contribution user to filter
+          schema:
+            type: integer
+            
+        - name: upvotedS
+          in: query
+          description: Equals 1 when we want to see the upvoted Contributions of the logged in User.
+          schema:
+            type: integer
+            
+        responses:
+          200:
+            description: successful operation
+            content:
+              application/json:
+                schema:
+                  type: array
+                  items:
+                    $ref: '#/components/schemas/Contribution'
+          404:
+            description: 'Error: Not Found'
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/ErrorResult'
+                examples:
+                  errorExample:
+                    $ref: '#/components/examples/error404User'
     post:
       tags:
-      - contributions
-      summary: Adds a new Contribution to our version of HackerNews. If the new Contribution has an url its type will be 'url'. If the url field is empty the new Contribution type will be 'ask'.
-      operationId: sumbitContribution
+      - tweets
+      summary: Adds a new Tweet to the Wall of Tweets
+      operationId: addTweet
       requestBody:
-        description: Provide the title of the new Contribution
+        description: Provide the author & content of the new Tweet
         content:
           application/json:
             schema:
               required:
-              - title
+              - author
+              - content
               type: object
               properties:
-                title:
+                author:
                   type: string
-                  minLength: 1
-                  example: 'Exemple title'
-                url:
+                  minLength: 4
+                  example: 'My name'
+                content:
                   type: string
-                  example: 'https://editor.swagger.io/#'
-                text:
-                  type: string
-                  example: 'This is a text'
+                  minLength: 4
+                  maxLength: 280
+                  example: 'My content'
         required: true
       responses:
         201:
-          description: Contribution created
+          description: Tweet created
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/AddContributionResult'
+                $ref: '#/components/schemas/AddTweetResult'
         400:
           description: 'Error: Bad Request'
           content:
@@ -230,10 +237,10 @@ components:
         user_id:
           type: integer
           example: 1
-    AddContributionResult:
+    AddTweetResult:
       type: object
       properties:
-        new_contribution:
+        new_tweet:
           $ref: '#/components/schemas/Contribution'
         api_key:
           type: string
@@ -250,6 +257,13 @@ components:
         message: 
           type: string
   examples:
+    error404User:
+      value:
+        status: 404
+        error: "Not Found"
+        message: "No User with that user_id"
+  
+  
     error400:
       value:
         status: 400
