# app/controllers/contributions_controller.rb
@@ -6,9 +6,15 @@ class ContributionsController < ApplicationController
   def index
     respond_to do |format|
       if params[:user_id]
-        @contributions = Contribution.where(user_id: params[:user_id]).order(created_at: :desc)
-        format.html { @contributions }
-        format.json { render json: @contributions.to_json(only: [:id, :title, :tipus, :url, :text, :created_at, :points, :user_id, :user]) }
+        @user = User.where(id: params[:user_id])
+        if @user.empty?
+          #format.json { render :json => :errors => 'pepito', :status => :notfound }
+          format.json { render :json => {:status => 404, :error => "Not Found", :message => "No User with that user_id"}, :status => 404 }
+        else
+          @contributions = Contribution.where(user_id: params[:user_id]).order(created_at: :desc)
+          format.html { @contributions }
+          format.json { render json: @contributions.to_json(only: [:id, :title, :tipus, :url, :text, :created_at, :points, :user_id, :user]) }
+        end
       elsif params[:upvotedS]
         @votes = Vote.where(voter_id: current_user.id, votable_type: 'contribution').select(:votable_id)
         @contributions = Contribution.where(id: @votes)
